2018-06-11
    * provided a way for httpuploadplugin to encrypt files before uploading
    * correctly decrypting carbons now

2018-05-02
    * provided ability to delete published devices from PEP

2018-05-01
    * using dedicated OMEMO identities per account instead of per profile

2018-04-08
    * added auto-downloading and decrypting of aesgcm:// links