@@ -1,3 +1,6 @@
+2018-06-14
+    * stop support of libsignal-protocol-c v2.3.1, use v2.3.2 and newer
+
 2018-06-11
     * provided a way for httpuploadplugin to encrypt files before uploading
     * correctly decrypting carbons now
